// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard - Snapshot Tests > matches error state snapshot 1`] = `
<div>
  <main
    aria-label="Dashboard"
    class="min-h-screen bg-slate-50 dark:bg-slate-900 p-6 lg:p-8"
    role="main"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="mb-8"
      >
        <h1
          class="text-2xl font-bold text-slate-900 dark:text-white"
        >
          Dashboard
        </h1>
        <p
          class="mt-1 text-slate-600 dark:text-slate-400"
        >
          Portfolio overview and project health metrics
        </p>
      </div>
      <section
        aria-labelledby="portfolio-heading"
        class="mb-8"
      >
        <h2
          class="sr-only"
          id="portfolio-heading"
        >
          Portfolio Summary
        </h2>
        <div
          class="p-6 rounded-xl border border-red-200 dark:border-red-800 bg-red-50 dark:bg-red-900/20"
        >
          <p
            class="text-red-600 dark:text-red-400 mb-2"
          >
            Failed to load portfolio summary
          </p>
          <button
            class="px-4 py-2 rounded-lg bg-red-600 text-white hover:bg-red-700"
          >
            Retry
          </button>
        </div>
      </section>
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-8"
      >
        <section
          aria-labelledby="projects-heading"
          class="lg:col-span-2"
        >
          <h2
            class="sr-only"
            id="projects-heading"
          >
            Project Health
          </h2>
          <div
            class="p-6 rounded-xl border border-red-200 dark:border-red-800 bg-red-50 dark:bg-red-900/20"
          >
            <p
              class="text-red-600 dark:text-red-400 mb-2"
            >
              Failed to load projects
            </p>
            <button
              class="px-4 py-2 rounded-lg bg-red-600 text-white hover:bg-red-700"
            >
              Retry
            </button>
          </div>
        </section>
        <section
          aria-labelledby="sync-heading"
        >
          <h2
            class="sr-only"
            id="sync-heading"
          >
            Sync Status
          </h2>
          <div
            class="p-6 rounded-xl border border-red-200 dark:border-red-800 bg-red-50 dark:bg-red-900/20"
          >
            <p
              class="text-red-600 dark:text-red-400 mb-2"
            >
              Failed to load sync status
            </p>
            <button
              class="px-4 py-2 rounded-lg bg-red-600 text-white hover:bg-red-700"
            >
              Retry
            </button>
          </div>
        </section>
      </div>
    </div>
  </main>
</div>
`;

exports[`Dashboard - Snapshot Tests > matches loaded state snapshot 1`] = `
<div>
  <main
    aria-label="Dashboard"
    class="min-h-screen bg-slate-50 dark:bg-slate-900 p-6 lg:p-8"
    role="main"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="mb-8"
      >
        <h1
          class="text-2xl font-bold text-slate-900 dark:text-white"
        >
          Dashboard
        </h1>
        <p
          class="mt-1 text-slate-600 dark:text-slate-400"
        >
          Portfolio overview and project health metrics
        </p>
      </div>
      <section
        aria-labelledby="portfolio-heading"
        class="mb-8"
      >
        <h2
          class="sr-only"
          id="portfolio-heading"
        >
          Portfolio Summary
        </h2>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4"
        >
          <div
            class="p-6 rounded-xl border cursor-pointer transition-all duration-200 hover:shadow-md bg-blue-50 dark:bg-blue-900/20 border-blue-200 dark:border-blue-800 text-blue-600 dark:text-blue-400"
            role="button"
            tabindex="0"
          >
            <div
              class="flex items-center gap-3 mb-2"
            >
              <div
                class="p-2 rounded-lg bg-white/50 dark:bg-slate-800/50"
              >
                <svg
                  class="w-5 h-5"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <p
                class="text-sm font-medium text-slate-600 dark:text-slate-400"
              >
                Total Projects
              </p>
            </div>
            <p
              class="text-3xl font-bold"
            >
              24
            </p>
          </div>
          <div
            class="p-6 rounded-xl border cursor-pointer transition-all duration-200 hover:shadow-md bg-green-50 dark:bg-green-900/20 border-green-200 dark:border-green-800 text-green-600 dark:text-green-400"
            role="button"
            tabindex="0"
          >
            <div
              class="flex items-center gap-3 mb-2"
            >
              <div
                class="p-2 rounded-lg bg-white/50 dark:bg-slate-800/50"
              >
                <svg
                  class="w-5 h-5"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <p
                class="text-sm font-medium text-slate-600 dark:text-slate-400"
              >
                On Track
              </p>
            </div>
            <p
              class="text-3xl font-bold"
            >
              15
            </p>
          </div>
          <div
            class="p-6 rounded-xl border cursor-pointer transition-all duration-200 hover:shadow-md bg-amber-50 dark:bg-amber-900/20 border-amber-200 dark:border-amber-800 text-amber-600 dark:text-amber-400"
            role="button"
            tabindex="0"
          >
            <div
              class="flex items-center gap-3 mb-2"
            >
              <div
                class="p-2 rounded-lg bg-white/50 dark:bg-slate-800/50"
              >
                <svg
                  class="w-5 h-5"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <p
                class="text-sm font-medium text-slate-600 dark:text-slate-400"
              >
                At Risk
              </p>
            </div>
            <p
              class="text-3xl font-bold"
            >
              6
            </p>
          </div>
          <div
            class="p-6 rounded-xl border cursor-pointer transition-all duration-200 hover:shadow-md bg-red-50 dark:bg-red-900/20 border-red-200 dark:border-red-800 text-red-600 dark:text-red-400"
            role="button"
            tabindex="0"
          >
            <div
              class="flex items-center gap-3 mb-2"
            >
              <div
                class="p-2 rounded-lg bg-white/50 dark:bg-slate-800/50"
              >
                <svg
                  class="w-5 h-5"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <p
                class="text-sm font-medium text-slate-600 dark:text-slate-400"
              >
                Critical
              </p>
            </div>
            <p
              class="text-3xl font-bold"
            >
              3
            </p>
          </div>
        </div>
      </section>
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-8"
      >
        <section
          aria-labelledby="projects-heading"
          class="lg:col-span-2"
        >
          <h2
            class="sr-only"
            id="projects-heading"
          >
            Project Health
          </h2>
          <div>
            <div
              class="flex items-center justify-between mb-4"
            >
              <h2
                class="text-lg font-semibold text-slate-900 dark:text-white"
              >
                Project Health Overview
              </h2>
              <button
                class="text-sm text-blue-600 hover:text-blue-700 dark:text-blue-400"
              >
                View All
              </button>
            </div>
            <div
              class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
            >
              <div
                class="p-4 rounded-lg border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 hover:shadow-md transition-all duration-200 cursor-pointer"
                data-status="at_risk"
                data-testid="project-card-proj-001"
                role="button"
                tabindex="0"
              >
                <div
                  class="flex items-start justify-between mb-3"
                >
                  <p
                    class="font-semibold text-slate-900 dark:text-white"
                  >
                    ACME Refinery Expansion
                  </p>
                  <span
                    class="px-2 py-1 text-xs font-medium rounded-full bg-amber-100 text-amber-800 dark:bg-amber-900/30 dark:text-amber-400"
                  >
                    At Risk
                  </span>
                </div>
                <div
                  class="mb-3"
                >
                  <div
                    class="flex justify-between text-sm text-slate-600 dark:text-slate-400 mb-1"
                  >
                    <span>
                      Progress
                    </span>
                    <span>
                      35
                      %
                    </span>
                  </div>
                  <div
                    aria-label="35% complete"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="35"
                    class="w-full bg-slate-200 dark:bg-slate-700 rounded-full h-2"
                    role="progressbar"
                  >
                    <div
                      class="h-2 rounded-full transition-all duration-300 bg-amber-500"
                      style="width: 35%;"
                    />
                  </div>
                </div>
                <div
                  class="grid grid-cols-2 gap-4 text-sm"
                >
                  <div>
                    <p
                      class="text-slate-500 dark:text-slate-400"
                    >
                      SPI
                    </p>
                    <p
                      class="font-medium text-amber-600"
                    >
                      0.92
                    </p>
                  </div>
                  <div>
                    <p
                      class="text-slate-500 dark:text-slate-400"
                    >
                      CPI
                    </p>
                    <p
                      class="font-medium text-amber-600"
                    >
                      0.88
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="p-4 rounded-lg border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 hover:shadow-md transition-all duration-200 cursor-pointer"
                data-status="on_track"
                data-testid="project-card-proj-002"
                role="button"
                tabindex="0"
              >
                <div
                  class="flex items-start justify-between mb-3"
                >
                  <p
                    class="font-semibold text-slate-900 dark:text-white"
                  >
                    Offshore Platform Alpha
                  </p>
                  <span
                    class="px-2 py-1 text-xs font-medium rounded-full bg-green-100 text-green-800 dark:bg-green-900/30 dark:text-green-400"
                  >
                    On Track
                  </span>
                </div>
                <div
                  class="mb-3"
                >
                  <div
                    class="flex justify-between text-sm text-slate-600 dark:text-slate-400 mb-1"
                  >
                    <span>
                      Progress
                    </span>
                    <span>
                      68
                      %
                    </span>
                  </div>
                  <div
                    aria-label="68% complete"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="68"
                    class="w-full bg-slate-200 dark:bg-slate-700 rounded-full h-2"
                    role="progressbar"
                  >
                    <div
                      class="h-2 rounded-full transition-all duration-300 bg-blue-500"
                      style="width: 68%;"
                    />
                  </div>
                </div>
                <div
                  class="grid grid-cols-2 gap-4 text-sm"
                >
                  <div>
                    <p
                      class="text-slate-500 dark:text-slate-400"
                    >
                      SPI
                    </p>
                    <p
                      class="font-medium text-green-600"
                    >
                      1.05
                    </p>
                  </div>
                  <div>
                    <p
                      class="text-slate-500 dark:text-slate-400"
                    >
                      CPI
                    </p>
                    <p
                      class="font-medium text-green-600"
                    >
                      0.98
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="p-4 rounded-lg border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800 hover:shadow-md transition-all duration-200 cursor-pointer"
                data-status="critical"
                data-testid="project-card-proj-003"
                role="button"
                tabindex="0"
              >
                <div
                  class="flex items-start justify-between mb-3"
                >
                  <p
                    class="font-semibold text-slate-900 dark:text-white"
                  >
                    Pipeline Network Beta
                  </p>
                  <span
                    class="px-2 py-1 text-xs font-medium rounded-full bg-red-100 text-red-800 dark:bg-red-900/30 dark:text-red-400"
                  >
                    Critical
                  </span>
                </div>
                <div
                  class="mb-3"
                >
                  <div
                    class="flex justify-between text-sm text-slate-600 dark:text-slate-400 mb-1"
                  >
                    <span>
                      Progress
                    </span>
                    <span>
                      12
                      %
                    </span>
                  </div>
                  <div
                    aria-label="12% complete"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="12"
                    class="w-full bg-slate-200 dark:bg-slate-700 rounded-full h-2"
                    role="progressbar"
                  >
                    <div
                      class="h-2 rounded-full transition-all duration-300 bg-amber-500"
                      style="width: 12%;"
                    />
                  </div>
                </div>
                <div
                  class="grid grid-cols-2 gap-4 text-sm"
                >
                  <div>
                    <p
                      class="text-slate-500 dark:text-slate-400"
                    >
                      SPI
                    </p>
                    <p
                      class="font-medium text-red-600"
                    >
                      0.72
                    </p>
                  </div>
                  <div>
                    <p
                      class="text-slate-500 dark:text-slate-400"
                    >
                      CPI
                    </p>
                    <p
                      class="font-medium text-red-600"
                    >
                      0.75
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
        <section
          aria-labelledby="sync-heading"
        >
          <h2
            class="sr-only"
            id="sync-heading"
          >
            Sync Status
          </h2>
          <div
            class="p-6 rounded-xl border border-slate-200 dark:border-slate-700 bg-white dark:bg-slate-800"
            data-testid="sync-status-card"
          >
            <div
              class="flex items-center justify-between mb-4"
            >
              <h2
                class="text-lg font-semibold text-slate-900 dark:text-white"
              >
                Sync Status
              </h2>
              <button
                aria-label="Sync settings"
                class="p-2 rounded-lg hover:bg-slate-100 dark:hover:bg-slate-700 text-slate-600 dark:text-slate-400"
              >
                <svg
                  class="w-5 h-5"
                  fill="none"
                  stroke="currentColor"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                  <path
                    d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
            <div
              class="space-y-4"
            >
              <div
                class="flex items-center justify-between"
              >
                <div
                  class="flex items-center gap-3"
                >
                  <div
                    class="w-3 h-3 rounded-full bg-green-500"
                  />
                  <span
                    class="font-medium text-slate-900 dark:text-white"
                  >
                    P6
                  </span>
                </div>
                <div
                  class="text-sm text-slate-600 dark:text-slate-400"
                >
                  <span
                    class="text-green-600 dark:text-green-400"
                  >
                    Connected
                  </span>
                  <span
                    class="mx-2"
                  >
                    •
                  </span>
                  <span>
                    Last sync: 
                    28/12/2024
                  </span>
                </div>
              </div>
              <div
                class="flex items-center justify-between"
              >
                <div
                  class="flex items-center gap-3"
                >
                  <div
                    class="w-3 h-3 rounded-full bg-green-500"
                  />
                  <span
                    class="font-medium text-slate-900 dark:text-white"
                  >
                    SAP
                  </span>
                </div>
                <div
                  class="text-sm text-slate-600 dark:text-slate-400"
                >
                  <span
                    class="text-green-600 dark:text-green-400"
                  >
                    Connected
                  </span>
                  <span
                    class="mx-2"
                  >
                    •
                  </span>
                  <span>
                    Last sync: 
                    28/12/2024
                  </span>
                </div>
              </div>
              <div
                class="pt-3 border-t border-slate-200 dark:border-slate-700"
              >
                <p
                  class="text-sm text-slate-600 dark:text-slate-400"
                >
                  Next sync scheduled: 
                  28/12/2024, 12:00:00
                </p>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </main>
</div>
`;

exports[`Dashboard - Snapshot Tests > matches loading state snapshot 1`] = `
<div>
  <main
    aria-label="Dashboard"
    class="min-h-screen bg-slate-50 dark:bg-slate-900 p-6 lg:p-8"
    role="main"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="mb-8"
      >
        <h1
          class="text-2xl font-bold text-slate-900 dark:text-white"
        >
          Dashboard
        </h1>
        <p
          class="mt-1 text-slate-600 dark:text-slate-400"
        >
          Portfolio overview and project health metrics
        </p>
      </div>
      <div
        class="sr-only"
        role="status"
      >
        Loading dashboard data...
      </div>
      <section
        aria-labelledby="portfolio-heading"
        class="mb-8"
      >
        <h2
          class="sr-only"
          id="portfolio-heading"
        >
          Portfolio Summary
        </h2>
        <div
          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4"
        >
          <div
            class="p-6 rounded-xl border border-slate-200 dark:border-slate-700 bg-slate-50 dark:bg-slate-800/50 animate-pulse"
            data-testid="skeleton-card"
          >
            <div
              class="h-4 bg-slate-200 dark:bg-slate-700 rounded w-1/3 mb-4"
            />
            <div
              class="h-8 bg-slate-200 dark:bg-slate-700 rounded w-1/2"
            />
          </div>
          <div
            class="p-6 rounded-xl border border-slate-200 dark:border-slate-700 bg-slate-50 dark:bg-slate-800/50 animate-pulse"
            data-testid="skeleton-card"
          >
            <div
              class="h-4 bg-slate-200 dark:bg-slate-700 rounded w-1/3 mb-4"
            />
            <div
              class="h-8 bg-slate-200 dark:bg-slate-700 rounded w-1/2"
            />
          </div>
          <div
            class="p-6 rounded-xl border border-slate-200 dark:border-slate-700 bg-slate-50 dark:bg-slate-800/50 animate-pulse"
            data-testid="skeleton-card"
          >
            <div
              class="h-4 bg-slate-200 dark:bg-slate-700 rounded w-1/3 mb-4"
            />
            <div
              class="h-8 bg-slate-200 dark:bg-slate-700 rounded w-1/2"
            />
          </div>
          <div
            class="p-6 rounded-xl border border-slate-200 dark:border-slate-700 bg-slate-50 dark:bg-slate-800/50 animate-pulse"
            data-testid="skeleton-card"
          >
            <div
              class="h-4 bg-slate-200 dark:bg-slate-700 rounded w-1/3 mb-4"
            />
            <div
              class="h-8 bg-slate-200 dark:bg-slate-700 rounded w-1/2"
            />
          </div>
        </div>
      </section>
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-8"
      >
        <section
          aria-labelledby="projects-heading"
          class="lg:col-span-2"
        >
          <h2
            class="sr-only"
            id="projects-heading"
          >
            Project Health
          </h2>
          <div
            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
          >
            <div
              class="p-6 rounded-xl border border-slate-200 dark:border-slate-700 bg-slate-50 dark:bg-slate-800/50 animate-pulse"
              data-testid="skeleton-card"
            >
              <div
                class="h-4 bg-slate-200 dark:bg-slate-700 rounded w-1/3 mb-4"
              />
              <div
                class="h-8 bg-slate-200 dark:bg-slate-700 rounded w-1/2"
              />
            </div>
            <div
              class="p-6 rounded-xl border border-slate-200 dark:border-slate-700 bg-slate-50 dark:bg-slate-800/50 animate-pulse"
              data-testid="skeleton-card"
            >
              <div
                class="h-4 bg-slate-200 dark:bg-slate-700 rounded w-1/3 mb-4"
              />
              <div
                class="h-8 bg-slate-200 dark:bg-slate-700 rounded w-1/2"
              />
            </div>
            <div
              class="p-6 rounded-xl border border-slate-200 dark:border-slate-700 bg-slate-50 dark:bg-slate-800/50 animate-pulse"
              data-testid="skeleton-card"
            >
              <div
                class="h-4 bg-slate-200 dark:bg-slate-700 rounded w-1/3 mb-4"
              />
              <div
                class="h-8 bg-slate-200 dark:bg-slate-700 rounded w-1/2"
              />
            </div>
          </div>
        </section>
        <section
          aria-labelledby="sync-heading"
        >
          <h2
            class="sr-only"
            id="sync-heading"
          >
            Sync Status
          </h2>
          <div
            class="p-6 rounded-xl border border-slate-200 dark:border-slate-700 bg-slate-50 dark:bg-slate-800/50 animate-pulse"
            data-testid="skeleton-card"
          >
            <div
              class="h-4 bg-slate-200 dark:bg-slate-700 rounded w-1/3 mb-4"
            />
            <div
              class="h-8 bg-slate-200 dark:bg-slate-700 rounded w-1/2"
            />
          </div>
        </section>
      </div>
    </div>
  </main>
</div>
`;
